# 8V42_Bogomolov_programming_3sem_l1

./: CMakeLists.txt  main.cpp
